--- a/src/app/archive/archive.component.css
+++ b/src/app/archive/archive.component.css
@@ -5,8 +5,6 @@
 }
 
 .tasks .task {
-  background-color: #C9C9C9;
-  border: 2px solid black;
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 10px;
@@ -36,7 +34,6 @@
 .tasks .task .deadline span {
   padding: 5px;
   background-color: indianred;
-  color: white;
   border-radius: 8px;
   font-size: 0.8em;
 }
@@ -46,10 +43,6 @@
   text-align: right;
 }
 
-button{
-  border-radius: 5px;
-  font-weight: bold;
-  padding: 5px;
-  min-width: 50px;
-  margin-left: 5px;
+.tasks mat-card {
+  margin-bottom: 10px;
 }
