--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<mat-toolbar>
+<header>
   <h1>Backend-Based Task Manager</h1>
-  <div class="spacer"></div>
-  <mat-chip-listbox>
-    <a mat-chip-option color="primary" routerLink="/tasks" routerLinkActive="active" #rlat="routerLinkActive" [selected]="rlat.isActive">Tasks</a>
-    <a mat-chip-option color="primary" routerLink="/archive" routerLinkActive="active" #rlaa="routerLinkActive" [selected]="rlaa.isActive">Archive</a>
-  </mat-chip-listbox>
-</mat-toolbar>
+  <nav>
+    <a routerLink="/tasks" routerLinkActive="active">Tasks</a>
+    <a routerLink="/archive" routerLinkActive="active">Archive</a>
+  </nav>
+</header>
 
 <div class="router-outlet">
   <router-outlet></router-outlet>
