--- a/src/app/archive/archive.component.html
+++ b/src/app/archive/archive.component.html
@@ -1,16 +1,14 @@
 <div class="container">
   <h2>Archive</h2>
   <div class="tasks">
-    <mat-card [class.completed]="task.completed" *ngFor="let task of tasks">
-      <mat-card-header>
-        <mat-card-subtitle *ngIf="task.deadline">{{ task.deadline | date: 'yyyy-MM-dd' }}</mat-card-subtitle>
-        <mat-card-title>{{ task.title }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions align="end">
-        <button mat-icon-button color="warn" (click)="delete(task)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </mat-card-actions>
-    </mat-card>
+    <div class="task" *ngFor="let task of tasks">
+      <div class="title">{{ task.title }}</div>
+      <div class="deadline">
+        <span *ngIf="task.deadline">{{ task.deadline }}</span>
+      </div>
+      <div class="actions">
+        <button (click)="delete(task)">Delete</button>
+      </div>
+    </div>
   </div>
 </div>
