--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -16,10 +16,6 @@
   flex-direction: column;
 }
 
-.tasks mat-card {
-  margin-bottom: 10px;
-}
-
 @media screen and (min-width: 768px) {
   .new-task {
     grid-template-columns: 1fr 1fr auto;
@@ -38,6 +34,7 @@
 }
 
 .tasks .task {
+  background-color: white;
   border: 2px solid black;
   border-radius: 5px;
   margin-bottom: 10px;
@@ -51,6 +48,7 @@
 
 .tasks .task.completed {
   text-decoration: line-through;
+  background-color: lime;
   opacity: 0.5;
 }
 
@@ -72,6 +70,7 @@
 .tasks .task .deadline span {
   padding: 5px;
   background-color: indianred;
+  color: white;
   border-radius: 8px;
   font-size: 0.8em;
 }
@@ -81,3 +80,7 @@
   text-align: right;
 }
 
+button {
+  border-radius: 5px;
+  min-width: 100px;
+}
